<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etName"
        android:hint="@string/event_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none" />

    <EditText
        android:id="@+id/etTime"
        android:hint="@string/event_time_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="time"
        android:inputType="time" />

    <EditText
        android:id="@+id/etLocation"
        android:hint="@string/event_location_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="location"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/etDescription"
        android:hint="@string/event_description_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:autofillHints="text"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSave"
        android:text="@string/save_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />
</LinearLayout>